# API-Dashboard

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/: feature.md  refactor.md
.github/pull_request_template/: bugfix.md
.github/workflows/: ci.yml
app/: __main__.py  application.py
app/config/: connection.py  lifetime.py  settings.py
app/models/: employees.py  offices_model.py
app/repository/: base_repository.py  offices_repository.py
app/schemas/: employees_schema.py  offices_schemas.py
app/services/: offices_members.py
app/utils/: exceptions.py  functions_validator.py  logger.py
app/views/: healthcheck.py  offices.py
tests/: conftest.py
tests/healtcheck/: test_healtcheck.py
tests/offices/: test_offices.py
tests/unity/: test_connection.py  test_employers.py  test_fuctions_validaet.py  test_fuctions_validate.py  test_lifetime.py  test_main_unit.py
